# L.I.L.I.T.H.

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SETUP.md  VENV_SETUP_GUIDE.md  docker-compose.yml  main.py  main_bare_bones.py  main_debugging.py  opgg_mcp_test.py  pyproject.toml  request.db  requirements.txt  setup.bat  setup.sh  temp-voice.py  wager.db
.cursor/plans/: tier_list_system_implementation_69feceee.plan.md
.github/workflows/: ci.yml  deploy.yml  main.yml  release-standalone-bundle.yml  release.yml  reminder.yml
admin_tools/: README.md  birthday_cleanup.py  check_dependencies.py  file_renamer.py  verify_databases.py
cogs/: 8ball.py  birthday.py  botstatus.py  economy.py  irc.py  movie.py  mtg.py.wip  mtg2.py.wip  mtg3.py  pokemon.py  say.py  trivia.py.wip  voice.py  watchparty.py  waterboard.py
cogs/archived/: waterboard.py.archived  waterboard2.py.archived
cogs/debugging/: role_debug.py
cogs/production/: 8ball.py  admin_command_toggle.py  birthday.py  botstatus.py  botstatus.py.temp  buzzer.py  coc.py  counter.py  crafty_controller.py  economy.py  event2.py  gambling.py  greek_god.py  movie.py  pokemon.py  powerups.py  requests.py  roulette.py  say.py  tcg.py  tierlist.py  trivia.py  voice.py  wager.py  watchparty.py  waterboard.py  waterboard2.py  wheel.py
cogs/testing/: bday_with_logs.py  economy.py  economy_copy.py  economy_testcopy.py  event2.py  music.py  pokemon.py.wip  powerups.py.wip  ranking.py  reactions.py.wip  reminder.py  reminder.py.wip  say.py  voice.py  voice_copy.py  voice_testcopy.py  waterboard2.py  waterboard3.py
docs/: ADMIN_COMMAND_TOGGLE.md  CONTRIBUTING.md  CONVENTIONAL_COMMITS.md  DEPLOY_DROPLET.md  DOPPLER_ENV_KEYS.md  MUSIC_BOT_GUIDE.md  POSTGRES.md  WHERE_TO_START.md  example_admin_cog.py
docs/coghelp/: ADMIN_COMMAND_TOGGLE.md  ADMIN_COMMAND_TOGGLE_GUIDE.md  example_admin_cog.py
economy_db/: economy_data.json  voice_times.json
lavalink/: README.txt  application.yml.example  run-local.sh
scripts/: build_deploy_bundle.sh  deploy.sh  docker_compose_local_image_test.sh  docker_compose_up.sh  local_docker_build.sh  local_docker_deploy.sh  migrate_sqlite_files_to_postgres_once.py  postgres_dump_and_restore_helpers.py  postgres_migrate_hosted_to_local.sh  run_bot.sh  run_bot_doppler.sh  run_bot_env.sh  tag_release.sh
scripts/deploy_bundle/: README.md  docker-compose.bundle-header.frag  docker_deploy.sh  rollout.sh  startup_script.sh
scripts/postgres_local/: README.md  docker-compose.yml  start.sh  status.sh  stop.sh
server_configs/: cogs_config_template.py  config.py  config_template  database_config.py
src/main_bot/: __init__.py  __main__.py  boot_log.py  cog_log_mixin.py  error_alerts.py  main.py  nextcord_voice_gateway_patch.py  paths.py
src/main_bot/cogs/: __init__.py
src/main_bot/db/: __init__.py  ddl.py  pool.py
src/main_bot/server_configs/: .env.template  config.py  database_config.py
tests/: conftest.py  test_brainrot_scheduler.py  test_config_helpers.py  test_counter_cog.py  test_local_music_http_server.py  test_local_music_scan.py  test_local_track_artwork.py  test_main_runtime_loading.py  test_mtg_autolink.py  test_pool_dsn.py  test_production_cogs.py  test_waterboard_cog.py
utils/: admin_command_manager.py  brave_image_helper.py  crafty_api.py  crafty_automation.py  temp_opgg_mcp_tools.md
working_disabled/: botstatus.py
(+52 files in other folders)
