[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "main-bot"
version = "0.1.0"
description = "Yet Another Kitchen Sink Discord Bot - YAKSDB"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "nextcord==2.6.0",
    "aiosqlite==0.21.0",
    "aiohttp==3.11.11",
    "requests==2.32.3",
    "pytz==2024.2",
    "discord-webhook==1.4.1",
    "google-genai==1.10.0",
    "Pillow==11.1.0",
    "yt-dlp==2024.8.6",
    "PyNaCl==1.5.0",
    "doppler-env==0.3.1",
    "audioop-lts>=0.2.0; python_version >= '3.13'",
    "setuptools>=65.0.0,<81",
]

[project.scripts]
bot = "main_bot.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/main_bot"]

[tool.uv]
package = true
