[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "main-bot"
version = "0.1.0"
description = "Yet Another Kitchen Sink Discord Bot - YAKSDB"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "nextcord==3.1.1",
    "asyncpg>=0.30.0",
    "aiohttp==3.11.11",
    "requests==2.32.3",
    "pytz==2024.2",
    "discord-webhook==1.4.1",
    "google-genai==1.10.0",
    "Pillow==11.1.0",
    "PyNaCl==1.5.0",
    "doppler-env==0.3.1",
    "audioop-lts>=0.2.0; python_version >= '3.13'",
    "setuptools>=65.0.0,<81",
    "wavelink>=3.4.0",
    "mutagen>=1.47.0",
]

[project.scripts]
bot = "main_bot.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/main_bot"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Module-scoped loop so asyncpg pools from ``tests/conftest.py`` stay on the same loop as async tests.
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"
# nextcord.tasks.Loop uses asyncio.get_event_loop() when the cog is constructed; sync tests
# have no running loop, which triggers this deprecation until nextcord moves to get_running_loop().
filterwarnings = [
    "ignore:There is no current event loop:DeprecationWarning:nextcord.ext.tasks",
]
